# SoundscapeDesigner

./: CLAUDE.md  IDEAS.md  TODO.md  generate_samples.py  generate_stems.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/Models/: Favorite.php  Soundscape.php  Stem.php  StemPack.php  Tag.php  User.php
app/Observers/: StemObserver.php
bootstrap/: app.php
database/factories/: SoundscapeFactory.php  StemFactory.php  StemPackFactory.php  TagFactory.php
database/migrations/: 2026_04_04_000001_create_stem_packs_table.php  2026_04_04_000002_create_stems_table.php  2026_04_04_000003_create_soundscapes_table.php  2026_04_04_100002_add_slugs_to_stem_packs_and_soundscapes.php  2026_04_04_100003_create_soundscape_stem_table.php  2026_04_04_100004_create_favorites_table.php  2026_04_04_100005_create_tags_tables.php  2026_04_04_200001_drop_config_from_soundscapes.php
resources/css/: app.css
resources/views/: app.blade.php
routes/: api.php  web.php
samples/: running_mix.json
soundscape/: __main__.py  app.py  config.py  definition_builder.py  dsp.py  mixer.py  set_generator.py  stem.py  stem_definition.py
stems/dynamic/: definitions.json  dynamic_mix.json  street_flow_mix.json
stems/forest/: definitions.json  forest_mix.json
stems/midnight/: definitions.json  midnight_mix.json
stems/neon/: definitions.json  neon_mix.json
tests/: conftest.py  helpers.py  test_config.py  test_dsp.py  test_generate_stems.py  test_mix_scenarios.py  test_mixer.py  test_stem.py  test_stem_definition.py
tests/Feature/: AuthTest.php  ExploreSearchTest.php  (+12 more)
(+45 files in other folders)
