[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soundscape-designer"
version = "0.1.0"
description = "Desktop tool to design and preview soundscapes for Stride"
requires-python = ">=3.10"
dependencies = [
    "dearpygui>=1.11",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
